--- a/projeto/composer.json
+++ b/projeto/composer.json
@@ -8,8 +8,10 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
+        "illuminate/html": "^5.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
