--- a/projeto/composer.json
+++ b/projeto/composer.json
@@ -11,7 +11,8 @@
         "illuminate/html": "^5.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.6"
+        "laravelcollective/html": "^5.6",
+        "khill/lavacharts" : "3.0.*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
