--- a/projeto/composer.json
+++ b/projeto/composer.json
@@ -9,10 +9,11 @@
         "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
         "illuminate/html": "^5.0",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.6.20",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.6",
-        "khill/lavacharts" : "3.0.*"
+        "khill/lavacharts" : "3.0.*",
+        "symfony/http-foundation": "4.0.11"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
